--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -32,7 +32,7 @@ jwt.refresh-expiration=${JWT_REFRESH_EXPIRATION:604800000}
 # ============================================
 # GOOGLE BOOKS API CONFIGURATION
 # ============================================
-google.books.api.key=${GOOGLE_BOOKS_API_KEY:}
+google.books.api.key=${GOOGLE_BOOKS_API_KEY:AIzaSyD_yV6VMUZ3y-8I8eDAgQVf8PI1f8d6Qm0}
 google.books.api.url=https://www.googleapis.com/books/v1/volumes
 
 # ============================================
